# adt

./: key.pem  readme.md  rootcert.pem  techstack.md  techstack.yml
architecture/: concept.md  context.md  datamodel.md
architecture/1 UseCases/: UC00:Импорт данных о ключевых инициативах.md  UC01:Загрузка промежуточных данных в ядро.md  UC02:Импорт каталога продуктов Confluence.md  UC03:Импорт ADR продуктов.md  UC04:Импорт материалов технического комитета продуктов.md  UC05:Импорт архитектуры продуктов ArchRepo.md  UC06:Экспорт данных о инициативах в Confluence.md  UC07:Экспорт данных о инициативах в почту.md  usecases.md
architecture/2 ADRS/: adr01_Выбор механизма запуска загрузчиков.md  adr02_Выбор Neo4j для хранения данных.md  adr03_Выбор Neo4j как пользовательского интерфейса.md  adr04_Выбор способа хранения истории данных в графе.md  adr05_Выбор способа хранения промежуточных данных для загрузки.md
architecture/2 Функциональные требования/: fr.md
architecture/3 Concept/: concept.md
architecture/4 ADRS/: adr01_etl_engine.md  adr02_js_graph_engine.md  adr03_mart_database.md  adr04_model_library.md  adr05_graphdb.md  adr06_version_history.md  adr07_data_reference.md
architecture/5 Deployment/: pilot.md
architecture/8 Plan/: plan.md
architecture/9 Questions/: questions.md
docker/: docker-compose.yaml
docker/mariadb/: Dockerfile
src/: CMakeLists.txt
src/config/: config.cpp  config.h
src/tasks/cnf_adr_importer/: main.cpp
src/tests/: main.cpp
src/util/: config.cpp  config.h  downloader.cpp  downloader.h
